apim-agent/kong/1.3.0-local-apim/CPtoDP/gateway-class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: kong
    annotations:
        konghq.com/gatewayclass-unmanaged: 'true'
spec:
    controllerName: konghq.com/kic-gateway-controller
