apim-agent/kong/1.3.0-local-apim/CPtoDP/gateway.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
  - name: proxy
    port: 8000
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: proxy-https
    port: 8443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: kong-tls-secret 
        namespace: kong
    allowedRoutes:
      namespaces:
        from: Same
